@@ -41,27 +41,27 @@ public class UI {
 		int usableHeight = screenHeight - (totalHeight + (margin * elements.size()*2));
 		
 		for(int i = 0; i < elements.size(); i++) {
-			totalWidth += elements.get(i).getWidth()*elements.get(i).getScale();
-			totalHeight += elements.get(i).getHeight()*elements.get(i).getScale();
+			totalWidth += elements.get(i).getWidth();
+			totalHeight += elements.get(i).getHeight();
 		}
 		
 		if(vertMode) {
 			if(usableHeight >= 0) { // if its possible to place the elements at all
-				float pos = (margin + elements.get(0).getHeight()*elements.get(0).getScale());
+				float pos = (margin + elements.get(0).getHeight());
 				
 				for(int i = 0; i < elements.size(); i++) {
 					UiElement current = elements.get(i);
 					current.setElementY(pos);
-					current.setElementX((screenWidth/2) - ((current.getWidth()*current.getScale())/2)); // center on x axis
+					current.setElementX((screenWidth/2) - (current.getWidth()/2)); // center on x axis
 					
 					if(current.isButton()) {
 						current.setTextX(current.getElementX() + 
-								(current.getWidth()*current.getScale() - current.getGlyphLayout().width)/2);
+								(current.getWidth() - current.getGlyphLayout().width)/2);
 						current.setTextY(current.getElementY() + 
-								(current.getHeight()*current.getScale() + current.getGlyphLayout().height)/2);
+								(current.getHeight() + current.getGlyphLayout().height)/2);
 					}
 					
-					pos += (margin + current.getHeight()*current.getScale());
+					pos += (margin + current.getHeight());
 				}
 			}
 		}
@@ -73,16 +73,16 @@ public class UI {
 				for(int i = 0; i < elements.size(); i++) {
 					UiElement current = elements.get(i);
 					current.setElementX(pos);
-					current.setElementY((screenHeight/2) - ((current.getHeight()*current.getScale())/2));
+					current.setElementY((screenHeight/2) - (current.getHeight()/2));
 					
 					if(current.isButton()) {
 						current.setTextX(current.getElementX() + 
-								(current.getWidth()*current.getScale() - current.getGlyphLayout().width)/2);
+								(current.getWidth() - current.getGlyphLayout().width)/2);
 						current.setTextY(current.getElementY() + 
-								(current.getHeight()*current.getScale() + current.getGlyphLayout().height)/2);
+								(current.getHeight() + current.getGlyphLayout().height)/2);
 					}
 					
-					pos += (margin + current.getWidth()*current.getScale());
+					pos += (margin + current.getWidth());
 				}
 			}
 		}
