@@ -27,25 +27,25 @@ public class UiElement {
 	public UiElement(Texture tex, int scale) { // for images
 		this.tex = tex;
 		this.scale = scale;
-		elementWidth = tex.getWidth();
-		elementHeight = tex.getHeight();
+		elementWidth = tex.getWidth() * scale;
+		elementHeight = tex.getHeight() * scale;
 	}
 	
-	public UiElement(Texture tex, String text, int scale,CORGame game) { // for buttons (with text)
+	public UiElement(Texture tex, String text, int scale, CORGame game) { // for buttons (with text)
 		this.tex = tex;
 		this.isButton = true;
 		this.scale = scale;
 		textLayout = new GlyphLayout(game.mainFont, text);
-		elementWidth = tex.getWidth();
-		elementHeight = tex.getHeight();
+		elementWidth = tex.getWidth() * scale;
+		elementHeight = tex.getHeight() * scale;
 	}
 	
-	public UiElement(String text, int scale,CORGame game) { // for text
+	public UiElement(String text, int scale, CORGame game) { // for text
 		this.isText = true;
 		this.scale = scale;
 		textLayout = new GlyphLayout(game.mainFont, text);
-		elementWidth = textLayout.width;
-		elementHeight = textLayout.height;
+		elementWidth = textLayout.width * scale;
+		elementHeight = textLayout.height * scale;
 	}
 	
 	public float getWidth() {
@@ -90,6 +90,10 @@ public class UiElement {
 	
 	public Texture getTexture() {
 		return tex;
+	}
+	
+	public void setTexture(Texture tex) {
+		this.tex = tex;
 	}
 	
 	public int getScale() {
